--- a/pkg/pkg1/manifests/role-binding.yaml
+++ b/pkg/pkg1/manifests/role-binding.yaml
@@ -1,12 +1,15 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: list-pods-binding
+  name: read-only-binding
 subjects:
 - kind: ServiceAccount
   name: alvo-svc
   namespace: rbac-example
 roleRef:
-  kind: ClusterRole
-  name: list-pods
+  kind: Role
+  name: read-only
   apiGroup: rbac.authorization.k8s.io
+
+
+
