--- a/pkg/pkg1/manifests/role-binding.yaml
+++ b/pkg/pkg1/manifests/role-binding.yaml
@@ -12,4 +12,17 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 
 
-
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: bind-list-pods
+  namespace: rbac-example
+subjects:
+- kind: ServiceAccount
+  name: alvo-svc
+  namespace: rbac-example
+roleRef:
+  kind: ClusterRole
+  name: list-pods
+  apiGroup: rbac.authorization.k8s.io
