--- a/misc/bgp-kind.yaml
+++ b/misc/bgp-kind.yaml
@@ -15,6 +15,12 @@ nodes:
             node-labels: "rack=rack0"
     extraPortMappings:
       - containerPort: 80
+        hostPort: 80
+        protocol: TCP
+      - containerPort: 443
+        hostPort: 443
+        protocol: TCP
+      - containerPort: 8080
         hostPort: 8080
         protocol: TCP
       - containerPort: 30001
