--- a/pkg/pkg3/manifests/services.yaml
+++ b/pkg/pkg3/manifests/services.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata: 
   name: fitness-hero-svc
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: fitness-hero-svc
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: fitness-hero
   ports:
