--- a/pkg/pkg3/manifests/gatewayClass.yaml
+++ b/pkg/pkg3/manifests/gatewayClass.yaml
@@ -3,4 +3,4 @@ kind: GatewayClass
 metadata:
   name: nginx-class
 spec:
-  controllerName: ingress-nginx    # must match your controller’s registered name&#8203;:contentReference[oaicite:0]{index=0}
+  controllerName: ingress-nginx    
