--- a/pkg/pkg4/manifests/deployment.yaml
+++ b/pkg/pkg4/manifests/deployment.yaml
@@ -30,6 +30,13 @@ spec:
           env:
             - name: HOST
               value: "0.0.0.0"
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
           lifecycle:
             preStop:
               exec:
