--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -15,6 +15,8 @@ resources:
 - ../../pkg/pkg4/manifests/services.yaml
 
 # Common labels to be applied to all resources
-commonLabels:
-  app: cka-study
-  environment: base
+labels:
+- includeSelectors: true
+  pairs:
+    app: car-app
+    environment: base
