--- a/misc/bgp-kind.yaml
+++ b/misc/bgp-kind.yaml
@@ -3,6 +3,7 @@ name: kind
 apiVersion: kind.x-k8s.io/v1alpha4
 networking:
   disableDefaultCNI: true
+  kubeProxyMode: none
   podSubnet: "10.1.0.0/16"
 nodes:
   - role: control-plane
